Fix layout issues

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -6,7 +6,7 @@
 h1 {
   color: fuchsia;
   background-color: navy;
-  padding: 1em;
+  padding: 0.5em 1em 1em 1em;
   font-size: 3em;
   margin: 0;
   text-align: center;
